ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: whale
spec:
  rules:
    - host: blue-whale.demo.com
      http:
        paths:
          - backend:
              service:
                name: blue-service
                port:
                  number: 80
            pathType: Prefix
            path: /
    - host: purple-whale.demo.com
      http:
        paths:
          - backend:
              service:
                name: purple-service
                port:
                  number: 80
            pathType: Prefix
            path: /
